Update README structure to match actual project packages
Co-authored-by: brunosilvaJava <12662607+brunosilvaJava@users.noreply.github.com>